--- a/templates/index.html
+++ b/templates/index.html
@@ -106,6 +106,10 @@
                 <input type="checkbox" name="generate_service_agreement" value="1" checked id="service-agreement-checkbox" style="margin-right: 8px;">
                 Service Agreement PDF
             </label>
+            <label style="display: block; margin: 10px 0;">
+                <input type="checkbox" name="generate_emergency_plan" value="1" checked style="margin-right: 8px;">
+                Emergency & Disaster Plan PDF
+            </label>
         </div>
         
         <div id="name-input-container" style="margin: 20px 0; display: none;">
