--- a/templates/index.html
+++ b/templates/index.html
@@ -110,6 +110,10 @@
                 <input type="checkbox" name="generate_emergency_plan" value="1" checked style="margin-right: 8px;">
                 Emergency & Disaster Plan PDF
             </label>
+            <label style="display: block; margin: 10px 0;">
+                <input type="checkbox" name="generate_service_estimate" value="1" checked style="margin-right: 8px;">
+                Service Estimate CSV
+            </label>
         </div>
         
         <div id="name-input-container" style="margin: 20px 0; display: none;">
