--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,11 @@
             </label>
             <label style="display: block; margin: 10px 0;">
                 <input type="checkbox" name="generate_service_estimate" value="1" checked style="margin-right: 8px;">
-                Service Estimate CSV
+                Service Estimate Excel
+            </label>
+            <label style="display: block; margin: 10px 0;">
+                <input type="checkbox" name="generate_risk_assessment" value="1" checked style="margin-right: 8px;">
+                Risk Assessment PDF
             </label>
         </div>
         
