--- a/templates/index.html
+++ b/templates/index.html
@@ -118,10 +118,14 @@
                 <input type="checkbox" name="generate_risk_assessment" value="1" checked style="margin-right: 8px;">
                 Risk Assessment PDF
             </label>
-            <label style="display: block; margin: 10px 0;">
-                <input type="checkbox" name="generate_support_plan" value="1" checked style="margin-right: 8px;">
-                Support Plan DOCX
-            </label>
+        <label style="display: block; margin: 10px 0;">
+            <input type="checkbox" name="generate_support_plan" value="1" checked style="margin-right: 8px;">
+            Support Plan DOCX
+        </label>
+        <label style="display: block; margin: 10px 0;">
+            <input type="checkbox" name="generate_medication_plan" value="1" checked style="margin-right: 8px;">
+            Medication Assistance Plan DOCX
+        </label>
         </div>
         
         <div id="name-input-container" style="margin: 20px 0; display: none;">
