--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shiftcare Form to NHCare Documents Transformer</title>
+    <title>Shift Care Form to NHCare Documents Transformer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -75,7 +75,7 @@
     </style>
 </head>
 <body>
-    <h1>Shiftcare Form to NHCare Documents Transformer</h1>
+    <h1>Shift Care Form to NHCare Documents Transformer</h1>
     
     {% with messages = get_flashed_messages() %}
         {% if messages %}
